kubernetes/clusters/base/_network-policy/allow-labeled-ingress-prometheus.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-ingress-prometheus
spec:
  endpointSelector:
    matchLabels:
      networking/allow-prometheus: "true"
  ingress:
    - fromEndpoints:
      - matchLabels:
          app.kubernetes.io/name: prometheus
          k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - rules:
            http:
              - method: "GET"
                path: "/metrics"
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      k8s:io.kubernetes.pod.namespace: monitoring
  egress:
    - toEndpoints:
        - matchLabels:
            networking/allow-prometheus: "true"
      toPorts:
        - rules:
            http:
              - method: "GET"
                path: "/metrics"
